<resources>
    <string name="app_name">SplashScreen</string>
    <string name="login_successfull">Login Successfull</string>
    <string name="your_username">username\n</string>
    <string name="your_password">Your Password\n</string>
    <string name="your_selected_courses">Select Cource</string>
    <string name="your_gender">Gender</string>
    <string name="your_birthdate">Birth Date\n</string>
    <string name="your_address">Address</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="select_cources">Select Course</string>
    <string name="c">C</string>
    <string name="cp">C++</string>
    <string name="html">HTML</string>
    <string name="css">CSS</string>
    <string name="java">JAVA</string>
    <string name="ruby">RUBY</string>
    <string name="js">JS</string>
    <string name="php">PHP</string>
    <string name="python">Python</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="birth_date">BirthDate</string>
    <string name="select_date">Select Date</string>
    <string name="address">Address</string>
    <string name="Address">Address</string>
    <string name="upload_your_photograph">Uplod Photo</string>
    <string name="photo">Photo</string>
</resources>