<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_page">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/spotify"
                android:layout_marginTop="20dp"
                android:layout_marginStart="110dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.463"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.076" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Register Page"
                android:textAlignment="center"
                android:textColor="#BF0F0F"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="178dp" />


            <EditText
                android:id="@+id/inputUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginTop="40dp"/>

            <EditText
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginTop="30dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_cources"
                android:textStyle="bold"
                android:textSize="17sp"/>


            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:rowCount="3"
                android:columnCount="3"
                android:layout_gravity="center"
                android:layout_marginStart="30dp">

                <CheckBox
                    android:id="@+id/Cb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/c"
                    android:textStyle="bold"
                    android:layout_marginEnd="30dp"/>

                <CheckBox
                    android:id="@+id/cppCb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cp"
                    android:textStyle="bold"
                    android:layout_marginEnd="30dp"/>

                <CheckBox
                    android:id="@+id/html"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/html"
                    android:textStyle="bold"
                    android:layout_marginEnd="30dp"/>

                <CheckBox
                    android:id="@+id/css"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/css"
                    android:textStyle="bold"
                    android:layout_marginEnd="30dp"/>

                <CheckBox
                    android:id="@+id/java"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/java"
                    android:textStyle="bold"
                    android:layout_marginEnd="30dp"/>

                <CheckBox
                    android:id="@+id/ruby"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ruby"
                    android:textStyle="bold"
                    android:layout_marginEnd="30dp"/>

                <CheckBox
                    android:id="@+id/js"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/js"
                    android:textStyle="bold"
                    android:layout_marginEnd="30dp"/>

                <CheckBox
                    android:id="@+id/php"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/php"
                    android:textStyle="bold"
                    android:layout_marginEnd="30dp"/>

                <CheckBox
                    android:id="@+id/python"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/python"
                    android:textStyle="bold"
                    android:layout_marginEnd="30dp"/>

            </GridLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textStyle="bold"
                android:textSize="17sp"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="50dp">

                <RadioButton
                    android:id="@+id/maleRb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:layout_marginEnd="20dp"/>

                <RadioButton
                    android:id="@+id/femaleRb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:layout_marginEnd="20dp"/>

                <RadioButton
                    android:id="@+id/otherRb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other"
                    android:layout_marginEnd="20dp"/>

            </RadioGroup>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/birth_date"
                android:textStyle="bold"
                android:textSize="17sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/Dob"
                    android:layout_width="280dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="100dp"
                    android:autofillHints="08/08/1995"
                    android:gravity="left|center"
                    android:inputType="date"
                    android:background="@drawable/background"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black"
                    android:paddingHorizontal="20dp"
                    android:text="@string/select_date"/>



            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:textSize="17sp"/>
            <Spinner
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="60dp"
                android:gravity="left|center"
                android:inputType="textCapCharacters"
                android:background="@drawable/background"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:paddingHorizontal="20dp"
                android:text="@string/Address" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upload_your_photograph"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:textSize="17sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="60dp"
                    android:gravity="left|center"
                    android:background="@drawable/background"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black"
                    android:paddingHorizontal="20dp"
                    android:text="@string/photo" />
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:src="@drawable/login"/>

            </LinearLayout>









            <!--<LinearLayout-->
            <!--    android:layout_width="match_parent"-->
            <!--    android:layout_height="wrap_content"-->
            <!--    android:orientation=""-->

            <!--<ToggleButton-->
            <!--    android:layout_width="60dp"-->
            <!--    android:layout_height="wrap_content"-->
            <!--    -->
            <!--    -->

            <Button
                android:id="@+id/btn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="Login"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>