<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AfterLogin">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Registered Data"
                android:textAlignment="center"
                android:textSize="50sp"
                android:padding="10dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:background="@drawable/background"
                android:layout_margin="10dp"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/login"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_username"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:textSize="17sp"/>
            <TextView

                android:id="@+id/usernameOut"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="60dp"
                android:gravity="left|center"
                android:inputType="textPostalAddress"
                android:background="@drawable/background"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:paddingHorizontal="20dp"
                android:text="@string/your_username" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_password"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:textSize="17sp"/>
            <TextView
                android:id="@+id/passwordOut"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="60dp"
                android:gravity="left|center"
                android:inputType="textPostalAddress"
                android:background="@drawable/background"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:paddingHorizontal="20dp"
                android:text="@string/your_password" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_selected_courses"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:textSize="17sp"/>
            <TextView
                android:id="@+id/coursesOut"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="60dp"
                android:gravity="left|center"
                android:inputType="textPostalAddress"
                android:background="@drawable/background"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:paddingHorizontal="20dp"
                android:text="@string/your_selected_courses" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_gender"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:textSize="17sp"/>
            <TextView
                android:id="@+id/genderOut"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="60dp"
                android:gravity="left|center"
                android:inputType="textPostalAddress"
                android:background="@drawable/background"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:paddingHorizontal="20dp"
                android:text="@string/your_gender" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_birthdate"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:textSize="17sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="60dp"
                android:gravity="left|center"
                android:inputType="textPostalAddress"
                android:background="@drawable/background"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:paddingHorizontal="20dp"
                android:text="@string/your_birthdate" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_address"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:textSize="17sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="60dp"
                android:gravity="left|center"
                android:inputType="textPostalAddress"
                android:background="@drawable/background"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:paddingHorizontal="20dp"
                android:text="@string/your_address"
                android:layout_marginBottom="20dp"/>

        </LinearLayout>


    </ScrollView>

</LinearLayout>